--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -14,8 +14,110 @@
             <div class="alert alert-light" role="alert">
 
               <h1>
-                Hi {{username}} !
+                Hi
+                <span style="color: red;">
+                  {{username}} !
+                </span>
               </h1>
+
+              {% if not m_get %}
+              <br><br>
+                <div class="alert alert-success" role="alert">
+                  <br>
+
+                  <table>
+                    {% for key, value in fetch[-1].items() %}
+                      <tr>
+        
+                        <td>
+                          <div class="alert alert-warning" role="alert">
+                            <h5>{{ key }}</h5>
+                          </div>
+                        </td>
+        
+                        <td>
+                          <div class="alert alert-danger" role="alert">
+                            <h5>{{ value }}</h5>
+                          </div>
+                        </td>
+        
+                      </tr>
+                    {% endfor %}
+                  </table>
+
+                </div>
+              {% endif %}
+
+              <br><br>
+              <div class="alert alert-primary" role="alert">
+
+                <h2 style="color: blue;">
+                  <strong>
+                    Copy
+                    <em style="color: green;">
+                      Customer ID
+                    </em>
+                  </strong>
+                </h2>
+
+                <br><br>
+                <iframe frameborder="5" scrolling="yes" width="100%" height="400"
+                  src="/fetch_history" name="imgbox" id="imgbox">
+                </iframe>
+              </div>
+  
+              <br>
+              <div class="alert alert-success" role="alert">
+                <h2 style="color: blue;">
+                  <strong>
+                    Mark
+                    <em style="color: red;">
+                      Entry
+                    </em>
+                  </strong>
+                </h2>
+
+                <br>
+                <div class="alert alert-warning" role="alert">
+
+                  <h5>Product Name</h5>  
+                  <input type="text" name="product" />
+                  <br><br><br>
+                  
+                  <h5>Total Cost</h5>
+                  <input type="text" name="cost" />
+                  <br><br><br>
+
+                  <h5>Customer ID</h5>
+                  <input type="text" name="cid" />
+                  <br><br>
+                  <!-- <input type="submit" id="submit" text="Login" /> -->
+                </div>
+
+                <br>
+                <input type="image"
+                  src="../static/submit.png"
+                  width="200"
+                  height="60"
+                  alt="submit"/>
+
+                <br>
+              </div>
+
+              <br>
+              {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                  <ul class=flashes>
+                  {% for message in messages %}
+                    <li>
+                      <h2 style="color: red;">
+                        {{ message }}
+                      </h2>
+                    </li>
+                  {% endfor %}
+                  </ul>
+                {% endif %}
+              {% endwith %}
 
               <br>
               <div class="alert alert-danger" role="alert">
@@ -29,6 +131,7 @@
             </div>
           </div>
         </div>
+
       </form>
     </center>
   </body>
