--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -62,7 +62,7 @@
 
                 <br><br>
                 <iframe frameborder="5" scrolling="yes" width="100%" height="400"
-                  src="/fetch_history" name="imgbox" id="imgbox">
+                  src="{{ url_for('fetch_history', username=username)}}" name="imgbox" id="imgbox">
                 </iframe>
               </div>
   
