--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
             <div class="alert alert-primary" role="alert">
               <a style="color:blue;" class="navbar-brand" href="/">
                 <strong>
-                  Google Sheet
+                  Home
                 </strong>
               </a>
             </div>
