--- a/templates/index.html
+++ b/templates/index.html
@@ -8,19 +8,43 @@
 
   <body>
     <center>
+      
+      <div class="alert alert-success" role="alert">
+        <h1 style="color: green;">Welcome</h1>
+      </div>
 
+      <br>
       <div class="jumbotron">
         <div class="container">
-
-          <a target = '_blank' href="https://imvickykumar999.herokuapp.com/">
-            <img src="../static/ideationology.jpg" 
-              width="85%"
-              alt="ideationology logo">
-          </a>
-
-          <br><br><br>
-          <h1>Welcome</h1>
           
+          <div class="alert alert-primary" role="alert">
+            <br>
+            <h3 style="color: blue;">Ideationology Lab</h3>
+            <br>
+
+            <a target = '_blank' href="https://ideationologylab.herokuapp.com/">
+              <img src="../static/ideationology.jpg" 
+                width="85%"
+                alt="ideationology logo">
+            </a>
+
+          <br><br>
+          </div>
+
+          <br><br>
+          <div class="alert alert-danger" role="alert">
+            <br>
+            <h3 style="color: red;">My Other Projects</h3>
+            <br>
+
+            <a target = '_blank' href="https://imvicks.herokuapp.com/">
+              <img src="../static/imvicks.png" 
+                width="85%"
+                alt="Projects">
+            </a>
+            <br><br>
+          </div>
+
         </div>
       </div>
 
