--- a/templates/404.html
+++ b/templates/404.html
@@ -47,7 +47,7 @@
         <div class="container">
 
           <div class="alert alert-danger" role="alert">
-            <a href="{{url_for('index')}}">
+            <a href="/user/imvickykumar999">
               <h1>
                 <strong>
                   Error 404
@@ -64,12 +64,12 @@
           <br>
 
           <div class="alert alert-primary" role="alert">
-            <a target = '_blank' href="https://dashboard.heroku.com/apps/ideationology/logs">
-              <h1 style="color:green;">
+            <a target = '_blank' href="https://dashboard.heroku.com/apps/imvickykumar/logs">
+              <h3 style="color:green;">
                 <em>
-                  heroku logs -t -a vixtest
+                  heroku logs -t -a imvickykumar
                 </em>
-              </h1>
+              </h3>
             </a>
           </div>
 
