--- a/templates/fetch_history.html
+++ b/templates/fetch_history.html
@@ -26,13 +26,13 @@
           <br>
           <input type="text" 
           placeholder="then, press add button"
-          name="cust" />
+          name="cust" required>
 
           <br><br>
           <input type="image"
             src="../static/add.png"
             width="200"
-            height="60"
+            height="70"
             alt="submit"/>
           <br><br>
         </div>
