--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -66,23 +66,31 @@
                   <strong>
                     Mark
                     <em style="color: red;">
-                      Entry
+                      Entry ...
                     </em>
                   </strong>
                 </h2>
 
                 <br>
                 <div class="alert alert-warning" role="alert">
-
-                  <h5>Product Name</h5>  
+                  <br>
+                  <h4>Product Name</h4>  
                   <input type="text" name="product" required>
-                  <br><br><br>
-                  
-                  <h5>Total Cost</h5>
-                  <input type="text" name="cost" required>
-                  <br><br><br>
+                  <br><br>
+                </div>
 
-                  <h5>Customer ID</h5>
+                <br>
+                <div class="alert alert-warning" role="alert">
+                  <br>
+                  <h4>Total Cost</h4>
+                  <input type="text" name="cost" required>
+                  <br><br>
+                </div>
+
+                <br>
+                <div class="alert alert-warning" role="alert">
+                  <br>
+                  <h4>Customer ID</h4>
                   <input type="text" name="cid" required>
                   <br><br>
                   <!-- <input type="submit" id="submit" text="Login" /> -->
