--- a/templates/fetch_history.html
+++ b/templates/fetch_history.html
@@ -16,11 +16,11 @@
         <div class="alert alert-success" role="alert">
           <br>
           <h2 style="color:red;">
-            Write Name
+            Write Customer Name
           </h2> 
 
           <h4 style="color:blue;">
-            To Add Customer
+            ... to Add User
           </h4>
 
           <br>
